	* DNS SRV records with equal priority are sorted with respect to their
	  weight as specified in RFC 2782.  (Vijay Raghunathan)
	* GnuTLS logging (disabled by default) can be controlled through the
	  PURPLE_GNUTLS_DEBUG environment variable, which is an integer between
	  0 and 9 (higher is more verbose). Higher values may reveal sensitive
	  information.

	Gadu-Gadu:
	* Accounts can specify a server to which to connect.
	  (Krzysztof "kreez" Tobola)
	* Correctly show tooltip status for contacts with status messages.
	  (Krzysztof "kkszysiu" Klinikowski)
	* Support for fetching buddy icons.  (Krzysztof "kkszysiu" Klinikowski)

	XMPP:
	* Voice & Video support with Jingle (XEP-0166, 0167, 0176, & 0177), voice
	  support with GTalk and voice and video support with the GMail web
	  client. (Mike "Maiku" Ruprecht)
	* Added a Service Discovery Browser plugin for Pidgin. (Andrei Mozzhuhin)
	* Support for in-band bytestreams for file transfers (XEP-0047). (Marcus
	  Lundblad)
	* Support for sending and receiving attentions (equivalent to "buzz"
	  and "nudge") using the command /buzz. (XEP-0224)
	* Support for connecting using BOSH. (Tobias Markmann)
	* A buddy's local time is displayed in the Get Info dialog if the remote
	  client supports it.
	* The set_chat_topic function can unset the chat topic.
	* The Ad-Hoc commands associated with our server are now always shown at
	  login.
	* Support showing and reporting idle times in the buddy list. (XEP-0256)
	* Support most recent version of User Avatar. (XEP-0084 v1.1)
	* Updated Entity Capabilities support. (Tobias Markmann)
	* Better support for receiving remote users' nicknames.
	* /affiliate and /role will now list the room members with the specified
	  affiliation/role if possible. (Andrei Mozzhuhin)
	* Put section breaks between resources in "Get Info" to improve readability.
	* Silently remove invalid XML 1.0 entities (e.g. ASCII control characters)
	  from sent messages.